Files fixed for working version

--- a/DevGames/app/src/main/res/values/strings.xml
+++ b/DevGames/app/src/main/res/values/strings.xml
@@ -54,7 +54,7 @@
     <string name="list_view_explanation">developers with a total of</string>
 
     <string name="new_message">You received a new notification</string>
-    <string name="cancel">cancel</string>
+    <string name="cancel">Cancel</string>
     <string name="new_device_registerd">Your account has been loggedin on another device!</string>
 
 
