--- a/DevGames/app/src/main/res/values-nl/strings.xml
+++ b/DevGames/app/src/main/res/values-nl/strings.xml
@@ -55,5 +55,6 @@
 
     <string name="new_message">U heeft een nieuwe melding ontvangen</string>
     <string name="new_device_registerd">U bent ingelogd op een ander apparaat!</string>
+    <string name="new_score">Je laatste push heeft een nieuwe score!</string>
 
 </resources>
