Added some updates classes

--- a/DevGames/app/src/main/res/values-nl/strings.xml
+++ b/DevGames/app/src/main/res/values-nl/strings.xml
@@ -54,7 +54,7 @@
     <string name="list_view_explanation">developers met een totaal van</string>
 
     <string name="new_message">U heeft een nieuwe melding ontvangen</string>
-    <string name="new_device_registerd">U bent ingelogd op een ander apparaat!</string>
+    <string name="new_device_registered">U bent ingelogd op een ander apparaat!</string>
     <string name="new_score">Je laatste push had een score van: %s!</string>
     <string name="new_score_default">Je hebt een nieuwe score voor een push!</string>
 
