--- a/DevGames/app/src/main/res/values-nl/strings.xml
+++ b/DevGames/app/src/main/res/values-nl/strings.xml
@@ -31,7 +31,13 @@
     <string name="sort_order">Sorteervolgorde</string>
     <string name="filter">Filter</string>
 
+    <string name="sort_name">Naam</string>
+    <string name="sort_score">Score</string>
+    <string name="sort_timestamp">Tijd</string>
+
     <string name="list_no_items">Geen items</string>
+    <string name="no_projects_available">Geen projecten beschikbaar</string>
+    <string name="no_pushes_available">Geen pushes beschikbaar</string>
 
     <string name="password">wachtwoord</string>
     <string name="username">gebruikersnaam</string>
@@ -63,5 +69,10 @@
     <string name="new_device_registered">U bent ingelogd op een ander apparaat!</string>
     <string name="new_score">Je laatste push had een score van: %s!</string>
     <string name="new_score_default">Je hebt een nieuwe score voor een push!</string>
+    <string name="refresh">refresh</string>
+    <string name="search">Zoeken</string>
+    <string name="sort">Sorteren</string>
+    <string name="duplications">Duplicaten</string>
+    <string name="no_name_available">Naam niet beschikbaar</string>
 
 </resources>
