--- a/DevGames/app/src/main/res/values/strings.xml
+++ b/DevGames/app/src/main/res/values/strings.xml
@@ -31,7 +31,13 @@
     <string name="sort_order">Sort order</string>
     <string name="filter">Filter</string>
 
+    <string name="sort_name">Name</string>
+    <string name="sort_score">Points</string>
+    <string name="sort_timestamp">Time</string>
+
     <string name="list_no_items">No items</string>
+    <string name="no_projects_available">No projects available</string>
+    <string name="no_pushes_available">No projects available</string>
 
     <string name="password">password</string>
     <string name="username">username</string>
@@ -63,6 +69,11 @@
     <string name="new_device_registered">Your account has been loggedin on another device!</string>
     <string name="new_score">Your last push had a score of: %s!</string>
     <string name="new_score_default">You have a new score for your push!</string>
+    <string name="refresh">refresh</string>
+    <string name="search">search</string>
+    <string name="sort">sort</string>
+    <string name="duplications">duplications</string>
+    <string name="no_name_available">No name available</string>
 
 
 </resources>
