--- a/DevGames/app/src/main/res/values/strings.xml
+++ b/DevGames/app/src/main/res/values/strings.xml
@@ -86,4 +86,5 @@
     <string name="refresh">refresh</string>
     <string name="search">search</string>
     <string name="sort">sort</string>
+    <string name="debt">debt</string>
 </resources>
